# raconteur

./: .gitignore  README.md  example.env  pyproject.toml  setup.cfg
raconteur/: __main__.py  bot.py  commands.py  config.py  db.py  exceptions.py  messages.py  plugin.py  queries.py  utils.py
raconteur/models/: base.py  game.py
raconteur/plugins/: __init__.py  core.py
raconteur/plugins/character/: communication.py  connections.py  models.py  plugin.py  web.py
raconteur/plugins/umbreal/: constants.py  models.py  plugin.py  web.py
raconteur/plugins/unknown_armies/: models.py  plugin.py  web.py
raconteur/web/: app.py  auth.py  client.py  context.py  loginpass_ext.py  templates.py  utils.py
templates/: base.html  home.html
templates/character/: all.html  locations.html  locations_edit.html  view.html  yours.html  yours_edit.html
templates/umbreal/: edit.html  list.html
templates/unknown_armies/: edit.html  list.html
